# edgerunner

./: .clang-format  .clang-tidy  .cmake-format.yaml  .codespellrc  .gitattributes  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE.txt  README.md  about.html  about_8dox.html  annotated.html  backend_8hpp.html  classedge_1_1Model.html  classedge_1_1Tensor.html  classedge_1_1qnn_1_1Backend.html  classedge_1_1qnn_1_1Config.html  classedge_1_1qnn_1_1Graph.html  classedge_1_1qnn_1_1GraphsInfo.html  classedge_1_1qnn_1_1ModelImpl.html  classedge_1_1qnn_1_1TensorImpl.html  classedge_1_1tflite_1_1ModelImpl.html  classedge_1_1tflite_1_1TensorImpl.html  conanfile.py  config_8hpp.html  dir_1fe442b5991f001c6284ed61ba46be6c.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_4c24cb39bd3d6a0054003ecdb249bece.html  dir_cfafba98a580ce4b62f8a6fa96d7cbb0.html  dir_e2b82aabb28dde420811bb57d2bca7a1.html  dir_ef3b2545113449f8f25e623a543d64e3.html  edgerunner_8hpp.html  example_2README_8md.html  files.html  graph_8hpp.html  index.html  md_example_README.html  (+15 more)
.github/scripts/: conan-ci-setup.sh
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  docs-ci.cmake  docs.cmake  install-config.cmake  install-rules.cmake  lint.cmake  variables.cmake
docs/: Doxyfile.in
example/: CMakeLists.txt  README.md  imageClassifier.hpp  mobilenet_v3_small.cpp  run_with_adb.sh
include/edgerunner/: edgerunner.hpp  model.hpp  tensor.hpp
include/edgerunner/qnn/: backend.h  backend.hpp  config.h  config.hpp  graph.hpp  graphHelper.hpp  model.hpp  tensor.hpp  tensorOps.hpp
include/edgerunner/qnn/backend/: backend.h  config.h
include/edgerunner/tflite/: model.hpp  tensor.hpp
models/tflite/: mobilenet_v3_small.tflite
profiles/: android
scripts/: run_with_adb.sh
source/: edgerunner.cpp
source/qnn/: backend.cpp  graph.cpp  model.cpp  tensor.cpp  tensorOps.cpp
source/qnn/backend/: backend.cc  backend.cpp
source/tflite/: model.cpp  tensor.cpp
test/: CMakeLists.txt
test/source/: bad_model_test.cpp  edgerunner_test.cpp  qnn_context_binary_npu_test.cpp  qnn_multiple_models_test.cpp  qnn_quantized_test.cpp  qnn_shared_library_npu_test.cpp  tflite_bad_model_test.cpp  tflite_bad_tensor_test.cpp  tflite_delegate_test.cpp  tflite_from_buffer_test.cpp  tflite_gpu_test.cpp  tflite_npu_test.cpp  tflite_quantized_test.cpp  tflite_test.cpp  utils.hpp
test/source/dummy/: dummy.hpp
